refac : Comment 도메인을 위한 createCommentResponseDto 생성